# gpu-wm

./: .gitattributes  .gitignore  CMakeLists.txt  CONTEXT_HANDOFF.md  CONTEXT_TRANSFER.md  CONTRIBUTING.md  GPT54_PROMPT.md  README.md  STATUS.md  moonshotideas.md
docs/: AGENT_SPLIT.md  ALOFT_AGENT_HANDOFF.md  CLUSTER_EXPERIMENTS.md  MOONSHOT_NOTES.md  SURFACE_AGENT_HANDOFF.md
docs/superpowers/plans/: 2026-03-21-lorenz-stagger-and-eta-stretch.md
include/: config.cuh  constants.cuh  grid.cuh  microphysics.cuh  projection.cuh  sponge.cuh  stability_control.cuh  surface_layer.cuh
node_plots/: README.md
src/: main.cu
src/core/: boundaries.cu  dynamics.cu  init.cu  sponge.cu
src/io/: grib_reader.cu  netcdf_output.cu  output.cu
src/physics/: microphysics.cu  microphysics_thompson.cu  pbl.cu  radiation.cu  surface_slab.cu
tools/: collect_node_plots.py  crop_wrf_compat_netcdf.py  download_gfs.py  extract_terrain.py  init_from_gfs.py  plot_forecast.py  plot_hrrr_comparison.py  plot_netcdf.py  plot_output.py  plot_pivotal_collage.py  plot_weather.py  render_wrf_products.py  run_fast_case.py  run_freestream_terrain.py  run_gate_matrix.py  run_iteration_cycle.py  verify_forecast.py  verify_surface_realism.py
tools/ops/: bootstrap_linux_worker.sh  default_local_queue.txt  default_remote_queue.txt  install_local_worker_task.ps1  local_worker_tick.ps1  worker_tick.sh
tools/rust-init-writer/: Cargo.toml
tools/rust-init-writer/src/: main.rs
